k8s-template/ingressClass.yml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: external-lb
spec:
  controller: example.com/ingress-controller
  parameters:
    apiGroup: k8s.mydemo.com
    kind: IngressParameters
    name: external-lb
