k8s-template/hello-demo.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-demo
spec:
  selector:
    app: hello-demo
  type: NodePort
  ports:
  - port: 8080
    targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-demo
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello-demo
  template:
    metadata:
      labels:
        app: hello-demo
    spec:
      containers:
      - name: hello-demo
        image: malibo8407/python36-flask-demo:v1
        ports:
        - containerPort: 8080
