k8s-template/production.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: production
  labels: # ADD LABEL for Deployment
    app: production
spec:
  selector:
    matchLabels: #  ADD LABEL for Deployment
      app: production
  template:
    metadata: #  ADD LABEL for Deployment
      labels:
        app: production
    spec:
      containers:
      - name: production
        image: cnych/echoserver
          #tag: "v1"
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: production
  labels: #  ADD LABEL for Service
    app: production
spec:
  ports:
  - port: 80
    targetPort: 8080
    name: http
  selector:
    app: production
