k8s-template/ingress-hello-demo.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hello-demo-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: hello-demo.info
      http:
        paths:
          - path: /v1
            backend:
              serviceName: hello-demo
              servicePort: 8080
