k8s-template/ingress-hello-demov3.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-demo-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
  - host: gitops-prod.tinyboat.blog 
    http:
      paths:
      - path: /v1
        pathType: Prefix
        backend:
          service:
            name: hello-demo
            port:
              number: 8080
